<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:elevation="5dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/cus_background_corner_10_white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_qa"
        android:tag="delete_qa"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/fullName"
            android:textColor="@color/color_2"
            android:tag="fullName"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/cus_background_corner_10_purple"
            android:hint="@string/enter_name"
            android:textColorHint="@color/color_2"
            android:tag="enter_name"
            android:gravity="center"
            android:textSize="16sp"
            android:inputType="text"
            android:singleLine="true"
            android:padding="10dp"
            android:imeOptions="actionDone"
            android:layout_marginBottom="5dp"
            android:clickable="false"
            android:focusable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/studentID"
            android:textColor="@color/color_2"
            android:tag="studentID"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStudentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/cus_background_corner_10_purple"
            android:hint="@string/enter_ID"
            android:textColorHint="@color/color_2"
            android:tag="enterID"
            android:gravity="center"
            android:textSize="16sp"
            android:inputType="number"
            android:singleLine="true"
            android:padding="10dp"
            android:imeOptions="actionDone"
            android:layout_marginBottom="5dp"
            android:clickable="false"
            android:focusable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/cancel"
            android:tag="cancel"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:backgroundTint="@color/line_color"
            android:textFontWeight="500"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/delete"
            android:tag="delete"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:backgroundTint="@color/pastel_red"/>

    </LinearLayout>
</LinearLayout>